.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:06:09 **** Rebuild of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
20:55:17 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
..\src\clase2-1.c: In function 'main':
..\src\clase2-1.c:22:33: error: expected expression before 'int'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
                                 ^~~
..\src\clase2-1.c:22:5: error: too few arguments to function 'calculaMaximoMinimoPromedio'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\clase2-1.c:14:5: note: declared here
 int calculaMaximoMinimoPromedio(int *maximo, int *minimo, int *promedio, int *cantidad);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
20:56:02 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
..\src\clase2-1.c: In function 'main':
..\src\clase2-1.c:22:33: error: expected expression before 'int'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
                                 ^~~
..\src\clase2-1.c:22:5: error: too few arguments to function 'calculaMaximoMinimoPromedio'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\clase2-1.c:14:5: note: declared here
 int calculaMaximoMinimoPromedio(int *maximo, int *minimo, int *promedio, int *cantidad);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
21:00:19 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
..\src\clase2-1.c: In function 'main':
..\src\clase2-1.c:22:33: error: expected expression before 'int'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
                                 ^~~
..\src\clase2-1.c:22:5: error: too few arguments to function 'calculaMaximoMinimoPromedio'
  if(calculaMaximoMinimoPromedio(int &maximo, int &minimo, int &promedio, int &cantidad) == 0){
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
..\src\clase2-1.c:14:5: note: declared here
 int calculaMaximoMinimoPromedio(int *maximo, int *minimo, int *promedio, int *cantidad);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
21:00:32 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
21:21:24 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
21:25:06 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase2-1.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:25:59 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -o clase2-1.exe "src\\clase2-1.o" 
c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase2-1.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:26:36 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -o clase2-1.exe "src\\clase2-1.o" 
c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase2-1.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:28:02 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -o clase2-1.exe "src\\clase2-1.o" 
c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../../mingw32/bin/ld.exe: cannot open output file clase2-1.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:30:49 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -o clase2-1.exe "src\\clase2-1.o" 
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
21:43:17 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
21:44:04 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
Info: Nothing to build for clase2-1
22:38:39 **** Incremental Build of configuration Debug for project clase2-1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase2-1.o" "..\\src\\clase2-1.c" 
gcc -o clase2-1.exe "src\\clase2-1.o" 
